Sorting out views via css name changes in NormalView.css and TutorialView.css. Still need to give class names to elements to fix styles, create alt views for draft, published feed, TutorialEditDraft, TutorialDeleteDraft. Still need to fix the custom scrollbars.

--- a/Provoke/client/src/Components/drafts/NormalView.css
+++ b/Provoke/client/src/Components/drafts/NormalView.css
@@ -29,11 +29,11 @@
   background: #67936d; 
 }
 
-h1, h2, h3 {
+.headline-styling {
     color: #0D681A;
 }
 
-p {
+.paragraph-styling {
     font-family: 'Catamaran', sans-serif;
 }
 
